helidon-se-client/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: helidon-se-client
  labels:
    app: helidon-se-client
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  selector:
    app: helidon-se-client
  ports:
    - port: 8080
      targetPort: 8080
      name: http
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: helidon-se-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helidon-se-client
  template:
    metadata:
      labels:
        app: helidon-se-client
        version: v1
    spec:
      containers:
        - name: helidon-se-client
          image: nrt.ocir.io/orasejapan/shukawam/helidon-se-client:1.3
          imagePullPolicy: IfNotPresent
          ports:
            - name: api
              containerPort: 8080
          resources:
            requests:
              cpu: 0.1
              memory: 500M
            limits:
              cpu: 0.2
              memory: 500M
          readinessProbe:
            httpGet:
              path: /health/ready
              port: api
            initialDelaySeconds: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health/live
              port: api
            initialDelaySeconds: 30
            periodSeconds: 5
      imagePullSecrets:
        - name: ocir-secret
