helidon-se-client/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helidon-se-client
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: helidon-se-client.shukawam.me
      http:
        paths:
          - backend:
              service:
                name: helidon-se-client
                port:
                  number: 8080
            path: /
            pathType: Prefix
